Fix: surnames with prefixes wrapping in tag-clouds

--- a/themes/fab/style.css
+++ b/themes/fab/style.css
@@ -910,6 +910,9 @@ a.showit:hover span {
 .tag_cloud {
 	font-family: tahoma, arial, helvetica, sans-serif;
 }
+.tag_cloud a {
+	wrap:none;
+}
 
 .clearfloat {
 	clear: both;
