--- a/themes/xenea/style.css
+++ b/themes/xenea/style.css
@@ -1347,6 +1347,9 @@ a.showit:hover span {
 .tag_cloud {
 	font-family: tahoma, arial, helvetica, sans-serif;
 }
+.tag_cloud a {
+	wrap:none;
+}
 
 /* Autocomplete styles*/
 .ac_input {
